--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -180,6 +180,8 @@
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
+  "contacts.create.optionalInformation.continue": "Continue",
+  "contacts.create.optionalInformation.skip": "Skip",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
   "displayRange.days": "{value} Days",
@@ -202,6 +204,11 @@
   "endorsement.signer": "Signed",
   "endorsements.sort": "Newest",
   "endorsements.title": "Endorsements ({count})",
+  "identity.address": "Street address",
+  "identity.city": "City",
+  "identity.city_of_birth": "City of birth",
+  "identity.country": "Country",
+  "identity.country_of_birth": "Country of birth",
   "identity.create.continue": "Continue",
   "identity.create.createNew": "Create new identity",
   "identity.create.optionalInformation.description": "This information is optional, enter it to grow your credit score",
@@ -216,14 +223,27 @@
   "identity.create.postalAddress.form.street": "Street",
   "identity.create.postalAddress.form.zip": "Zip code",
   "identity.create.postalAddress.title": "Optional: postal address",
+  "identity.create.preview.description": "Please check your personal data before signing",
+  "identity.create.preview.mainInformation": "Main information",
+  "identity.create.preview.optionalInformation": "Optional information",
+  "identity.create.preview.title": "Preview identity",
+  "identity.create.requiredData.description": "Please enter this required data to join the Bitcredit network",
   "identity.create.requiredData.form.emailAddress": "Email address",
   "identity.create.requiredData.form.fullName": "Full name",
+  "identity.create.requiredData.title": "Personal identity",
   "identity.create.requiredInformation.description": "Please enter this required data to join the Bitcredit network",
   "identity.create.requiredInformation.title": "Personal identity",
   "identity.create.restore": "Restore identity",
+  "identity.create.sign": "Sign",
   "identity.create.skip": "Skip",
   "identity.create.subtitle": "Your personal data is stored securely and encrypted in the network, nobody can decrypt it without your permission",
+  "identity.create.termsAndConditions": "I agree to the <span>Terms and conditions</span>",
   "identity.create.title": "Encrypted data",
+  "identity.date_of_birth": "Birth date",
+  "identity.email": "Email address",
+  "identity.identification_number": "Social security number",
+  "identity.name": "Full name",
+  "identity.zip": "Zip code",
   "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
   "onboarding.screens.fourth": "Open software, always on, 24x7. Free to download and use for all.",
   "onboarding.screens.second": "B2B direct credit. no middlemen. Easier financing, better terms.",
