chore: create edit identity page

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -23,13 +23,6 @@
   "Clear all": "Clear all",
   "Company": "Company",
   "Confirm": "Confirm",
-  "Contact city of registration": "City of registration",
-  "Contact country of registration": "Country of regitration",
-  "Contact email": "Email address",
-  "Contact postal address": "Postal address",
-  "Contact proof of registration": "Proof of registration",
-  "Contact registration date": "Registration date",
-  "Contact registration number": "Registration number",
   "Contacts": "Contacts",
   "Contingent": "Contingent",
   "Continue": "Continue",
@@ -283,6 +276,16 @@
   "identity.address": "Street address",
   "identity.city": "City",
   "identity.city_of_birth": "City of birth",
+  "identity.company.address": "Company address",
+  "identity.company.city": "City",
+  "identity.company.city_of_registration": "City of registration",
+  "identity.company.country": "Country",
+  "identity.company.country_of_registration": "Country of registration",
+  "identity.company.email": "Company email",
+  "identity.company.name": "Legal company name",
+  "identity.company.registration_date": "Registration date",
+  "identity.company.registration_number": "Registration number",
+  "identity.company.zip": "Zip code",
   "identity.companyIdentities.title": "Company identities",
   "identity.country": "Country",
   "identity.country_of_birth": "Country of birth",
@@ -318,10 +321,23 @@
   "identity.create.title": "Encrypted data",
   "identity.createNewCompanyIdentity": "Create new company",
   "identity.date_of_birth": "Birth date",
+  "identity.edit": "Edit personal identity",
+  "identity.edit.cancel": "Cancel",
+  "identity.edit.save": "Save",
   "identity.email": "Email address",
   "identity.identification_number": "Social security number",
   "identity.logout": "Remove identity from device",
   "identity.name": "Full name",
+  "identity.personal.address": "Postal address",
+  "identity.personal.city": "City",
+  "identity.personal.city_of_birth": "City of birth",
+  "identity.personal.country": "Country",
+  "identity.personal.country_of_birth": "Country of birth",
+  "identity.personal.date_of_birth": "Birth date",
+  "identity.personal.email": "Email address",
+  "identity.personal.identification_number": "Social security number",
+  "identity.personal.name": "Legal full name",
+  "identity.personal.zip": "Zip code",
   "identity.personalIdentity.title": "Personal identity",
   "identity.title": "Switch identity",
   "identity.view": "View",
@@ -391,8 +407,5 @@
   "settings.theme.title": "Theme",
   "settings.title": "Settings",
   "settings.versionNumber": "Version: {version}",
-  "viewIdentity.addAuthorizedSigner": "Add authorized signer",
-  "viewIdentity.editAuthorizedSigners": "Edit authorized signers",
-  "viewIdentity.titleForCompanyIdentity": "Company information",
-  "viewIdentity.titleForPersonalIdentity": "Personal identity"
+  "viewIdentity.addAuthorizedSigner": "Add authorized signer"
 }
