chore: create company flow

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -182,6 +182,25 @@
   "bill.recourse.sign.confirm": "Confirm",
   "bill.recourse.sign.subtitle": "This recourse request is legally binding",
   "bill.recourse.sign.title": "Are you sure?",
+  "company.address": "Company address",
+  "company.city": "City",
+  "company.city_of_registration": "City of registration",
+  "company.country": "Country",
+  "company.country_of_registration": "Country of registration",
+  "company.create.continue": "Continue",
+  "company.create.optionalInformation.continue": "Continue",
+  "company.create.optionalInformation.description": "This information is optional, enter it for your company's credit score",
+  "company.create.optionalInformation.skip": "Skip",
+  "company.create.optionalInformation.title": "Optional: other information",
+  "company.create.postalAddress.description": "These fields are needed for bills in your company’s name",
+  "company.create.postalAddress.title": "Company postal address",
+  "company.create.requiredInformation.description": "Please enter the required data to create a new company identity",
+  "company.create.requiredInformation.title": "Company identity",
+  "company.email": "Company email",
+  "company.name": "Legal company name",
+  "company.registration_date": "Registration date",
+  "company.registration_number": "Registration number",
+  "company.zip": "Zip code",
   "contact.view.delete": "Delete contact",
   "contact.view.delete.cancel": "Cancel",
   "contact.view.delete.confirm": "Delete",
@@ -291,31 +310,20 @@
   "identity.country_of_birth": "Country of birth",
   "identity.create.continue": "Continue",
   "identity.create.createNew": "Create new identity",
+  "identity.create.optionalInformation.continue": "Continue",
   "identity.create.optionalInformation.description": "This information is optional, enter it to grow your credit score",
-  "identity.create.optionalInformation.form.birthDate": "Birth date",
-  "identity.create.optionalInformation.form.cityOfBirth": "City of birth",
-  "identity.create.optionalInformation.form.countryOfBirth": "Country of birth",
-  "identity.create.optionalInformation.form.identificationNumber": "Identification number",
+  "identity.create.optionalInformation.skip": "Skip",
   "identity.create.optionalInformation.title": "Optional: other information",
   "identity.create.postalAddress.description": "These fields are only needed if you want to issue bills in your own name",
-  "identity.create.postalAddress.form.city": "City",
-  "identity.create.postalAddress.form.country": "Country",
-  "identity.create.postalAddress.form.street": "Street",
-  "identity.create.postalAddress.form.zip": "Zip code",
   "identity.create.postalAddress.title": "Optional: postal address",
   "identity.create.preview.description": "Please check your personal data before signing",
   "identity.create.preview.mainInformation": "Main information",
   "identity.create.preview.optionalInformation": "Optional information",
   "identity.create.preview.title": "Preview identity",
-  "identity.create.requiredData.description": "Please enter this required data to join the Bitcredit network",
-  "identity.create.requiredData.form.emailAddress": "Email address",
-  "identity.create.requiredData.form.fullName": "Full name",
-  "identity.create.requiredData.title": "Personal identity",
   "identity.create.requiredInformation.description": "Please enter this required data to join the Bitcredit network",
   "identity.create.requiredInformation.title": "Personal identity",
   "identity.create.restore": "Restore identity",
   "identity.create.sign": "Sign",
-  "identity.create.skip": "Skip",
   "identity.create.subtitle": "Your personal data is stored securely and encrypted in the network, nobody can decrypt it without your permission",
   "identity.create.termsAndConditions": "I agree to the <span>Terms and conditions</span>",
   "identity.create.title": "Encrypted data",
@@ -326,6 +334,12 @@
   "identity.edit.save": "Save",
   "identity.email": "Email address",
   "identity.identification_number": "Social security number",
+  "identity.list": "Switch identity",
+  "identity.list.companies": "Company identities",
+  "identity.list.createCompanyIdentity": "Create new company",
+  "identity.list.personal": "Personal identity",
+  "identity.list.remove": "Remove identity from device",
+  "identity.list.view": "View",
   "identity.logout": "Remove identity from device",
   "identity.name": "Full name",
   "identity.personal.address": "Postal address",
