--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -202,6 +202,12 @@
   "company.preview.title": "Preview company",
   "company.registration_date": "Registration date",
   "company.registration_number": "Registration number",
+  "company.signer.add": "Add authorized signer",
+  "company.signer.remove": "Do you want to delete {name}?",
+  "company.signer.remove.cancel": "Cancel",
+  "company.signer.remove.confirm": "Confirm",
+  "company.signer.remove.warning": "You can always re-add a signer later",
+  "company.signers": "Authorized signers",
   "company.zip": "Zip code",
   "contact.view.delete": "Delete contact",
   "contact.view.delete.cancel": "Cancel",
