--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -196,6 +196,9 @@
   "company.create.postalAddress.title": "Company postal address",
   "company.create.requiredInformation.description": "Please enter the required data to create a new company identity",
   "company.create.requiredInformation.title": "Company identity",
+  "company.edit.cancel": "Cancel",
+  "company.edit.save": "Save",
+  "company.edit.title": "Edit company identity",
   "company.email": "Company email",
   "company.name": "Legal company name",
   "company.preview.description": "Please check your company data before signing",
@@ -208,6 +211,8 @@
   "company.signer.remove.confirm": "Confirm",
   "company.signer.remove.warning": "You can always re-add a signer later",
   "company.signers": "Authorized signers",
+  "company.view.signers": "Edit authorized signers",
+  "company.view.title": "Company details",
   "company.zip": "Zip code",
   "contact.view.delete": "Delete contact",
   "contact.view.delete.cancel": "Cancel",
