--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -214,6 +214,7 @@
   "company.view.signers": "Edit authorized signers",
   "company.view.title": "Company details",
   "company.zip": "Zip code",
+  "contact.create.success": "Contact created successfully",
   "contact.view.delete": "Delete contact",
   "contact.view.delete.cancel": "Cancel",
   "contact.view.delete.confirm": "Delete",
@@ -275,6 +276,8 @@
   "contacts.empty.create": "New contact",
   "contacts.empty.description": "Create your first contact to start issuing bills",
   "contacts.empty.title": "No contacts yet",
+  "contacts.list.create": "New contact",
+  "contacts.list.title": "Contacts",
   "contacts.nodeId": "Node ID",
   "contacts.person.cityOfBirth": "City of birth",
   "contacts.person.countryOfBirth": "Country of birth",
