--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -23,13 +23,6 @@
   "Clear all": "Clear all",
   "Company": "Company",
   "Confirm": "Confirm",
-  "Contact city of registration": "City of registration",
-  "Contact country of registration": "Country of regitration",
-  "Contact email": "Email address",
-  "Contact postal address": "Postal address",
-  "Contact proof of registration": "Proof of registration",
-  "Contact registration date": "Registration date",
-  "Contact registration number": "Registration number",
   "Contacts": "Contacts",
   "Contingent": "Contingent",
   "Continue": "Continue",
@@ -179,6 +172,49 @@
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
+  "bill.recourse.nonAcceptance.priorHolders": "Prior holders",
+  "bill.recourse.nonAcceptance.priorHolders.description": "Select a prior holder for recourse",
+  "bill.recourse.nonAcceptance.select": "Select",
+  "bill.recourse.nonAcceptance.sum": "Request the sum of",
+  "bill.recourse.nonAcceptance.title": "Request recourse",
+  "bill.recourse.sign": "Sign",
+  "bill.recourse.sign.cancel": "Cancel",
+  "bill.recourse.sign.confirm": "Confirm",
+  "bill.recourse.sign.subtitle": "This recourse request is legally binding",
+  "bill.recourse.sign.title": "Are you sure?",
+  "company.address": "Company address",
+  "company.city": "City",
+  "company.city_of_registration": "City of registration",
+  "company.country": "Country",
+  "company.country_of_registration": "Country of registration",
+  "company.create.continue": "Continue",
+  "company.create.optionalInformation.continue": "Continue",
+  "company.create.optionalInformation.description": "This information is optional, enter it for your company's credit score",
+  "company.create.optionalInformation.skip": "Skip",
+  "company.create.optionalInformation.title": "Optional: other information",
+  "company.create.postalAddress.description": "These fields are needed for bills in your company’s name",
+  "company.create.postalAddress.title": "Company postal address",
+  "company.create.requiredInformation.description": "Please enter the required data to create a new company identity",
+  "company.create.requiredInformation.title": "Company identity",
+  "company.edit.cancel": "Cancel",
+  "company.edit.save": "Save",
+  "company.edit.title": "Edit company identity",
+  "company.email": "Company email",
+  "company.name": "Legal company name",
+  "company.preview.description": "Please check your company data before signing",
+  "company.preview.title": "Preview company",
+  "company.registration_date": "Registration date",
+  "company.registration_number": "Registration number",
+  "company.signer.add": "Add authorized signer",
+  "company.signer.remove": "Do you want to delete {name}?",
+  "company.signer.remove.cancel": "Cancel",
+  "company.signer.remove.confirm": "Confirm",
+  "company.signer.remove.warning": "You can always re-add a signer later",
+  "company.signers": "Authorized signers",
+  "company.view.signers": "Edit authorized signers",
+  "company.view.title": "Company details",
+  "company.zip": "Zip code",
+  "contact.create.success": "Contact created successfully",
   "contact.view.delete": "Delete contact",
   "contact.view.delete.cancel": "Cancel",
   "contact.view.delete.confirm": "Delete",
@@ -239,18 +275,9 @@
   "contacts.edit.save": "Save",
   "contacts.empty.create": "New contact",
   "contacts.empty.description": "Create your first contact to start issuing bills",
-  "bill.recourse.nonAcceptance.priorHolders": "Prior holders",
-  "bill.recourse.nonAcceptance.priorHolders.description": "Select a prior holder for recourse",
-  "bill.recourse.nonAcceptance.select": "Select",
-  "bill.recourse.nonAcceptance.sum": "Request the sum of",
-  "bill.recourse.nonAcceptance.title": "Request recourse",
-  "bill.recourse.sign": "Sign",
-  "bill.recourse.sign.cancel": "Cancel",
-  "bill.recourse.sign.confirm": "Confirm",
-  "bill.recourse.sign.subtitle": "This recourse request is legally binding",
-  "bill.recourse.sign.title": "Are you sure?",
-  "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
+  "contacts.list.create": "New contact",
+  "contacts.list.title": "Contacts",
   "contacts.nodeId": "Node ID",
   "contacts.person.cityOfBirth": "City of birth",
   "contacts.person.countryOfBirth": "Country of birth",
@@ -281,12 +308,70 @@
   "endorsement.signer": "Signed",
   "endorsements.sort": "Newest",
   "endorsements.title": "Endorsements ({count})",
+  "identity.address": "Street address",
+  "identity.city": "City",
+  "identity.city_of_birth": "City of birth",
+  "identity.company.address": "Company address",
+  "identity.company.city": "City",
+  "identity.company.city_of_registration": "City of registration",
+  "identity.company.country": "Country",
+  "identity.company.country_of_registration": "Country of registration",
+  "identity.company.email": "Company email",
+  "identity.company.name": "Legal company name",
+  "identity.company.registration_date": "Registration date",
+  "identity.company.registration_number": "Registration number",
+  "identity.company.zip": "Zip code",
   "identity.companyIdentities.title": "Company identities",
+  "identity.country": "Country",
+  "identity.country_of_birth": "Country of birth",
+  "identity.create.continue": "Continue",
+  "identity.create.createNew": "Create new identity",
+  "identity.create.optionalInformation.continue": "Continue",
+  "identity.create.optionalInformation.description": "This information is optional, enter it to grow your credit score",
+  "identity.create.optionalInformation.skip": "Skip",
+  "identity.create.optionalInformation.title": "Optional: other information",
+  "identity.create.postalAddress.description": "These fields are only needed if you want to issue bills in your own name",
+  "identity.create.postalAddress.title": "Optional: postal address",
+  "identity.create.preview.description": "Please check your personal data before signing",
+  "identity.create.preview.mainInformation": "Main information",
+  "identity.create.preview.optionalInformation": "Optional information",
+  "identity.create.preview.title": "Preview identity",
+  "identity.create.requiredInformation.description": "Please enter this required data to join the Bitcredit network",
+  "identity.create.requiredInformation.title": "Personal identity",
+  "identity.create.restore": "Restore identity",
+  "identity.create.sign": "Sign",
+  "identity.create.subtitle": "Your personal data is stored securely and encrypted in the network, nobody can decrypt it without your permission",
+  "identity.create.termsAndConditions": "I agree to the <span>Terms and conditions</span>",
+  "identity.create.title": "Encrypted data",
   "identity.createNewCompanyIdentity": "Create new company",
+  "identity.date_of_birth": "Birth date",
+  "identity.edit": "Edit personal identity",
+  "identity.edit.cancel": "Cancel",
+  "identity.edit.save": "Save",
+  "identity.email": "Email address",
+  "identity.identification_number": "Social security number",
+  "identity.list": "Switch identity",
+  "identity.list.companies": "Company identities",
+  "identity.list.createCompanyIdentity": "Create new company",
+  "identity.list.personal": "Personal identity",
+  "identity.list.remove": "Remove identity from device",
+  "identity.list.view": "View",
   "identity.logout": "Remove identity from device",
+  "identity.name": "Full name",
+  "identity.personal.address": "Postal address",
+  "identity.personal.city": "City",
+  "identity.personal.city_of_birth": "City of birth",
+  "identity.personal.country": "Country",
+  "identity.personal.country_of_birth": "Country of birth",
+  "identity.personal.date_of_birth": "Birth date",
+  "identity.personal.email": "Email address",
+  "identity.personal.identification_number": "Social security number",
+  "identity.personal.name": "Legal full name",
+  "identity.personal.zip": "Zip code",
   "identity.personalIdentity.title": "Personal identity",
   "identity.title": "Switch identity",
   "identity.view": "View",
+  "identity.zip": "Zip code",
   "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
   "onboarding.screens.fourth": "Open software, always on, 24x7. Free to download and use for all.",
   "onboarding.screens.second": "B2B direct credit. no middlemen. Easier financing, better terms.",
@@ -352,8 +437,5 @@
   "settings.theme.title": "Theme",
   "settings.title": "Settings",
   "settings.versionNumber": "Version: {version}",
-  "viewIdentity.addAuthorizedSigner": "Add authorized signer",
-  "viewIdentity.editAuthorizedSigners": "Edit authorized signers",
-  "viewIdentity.titleForCompanyIdentity": "Company information",
-  "viewIdentity.titleForPersonalIdentity": "Personal identity"
+  "viewIdentity.addAuthorizedSigner": "Add authorized signer"
 }
