--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -182,6 +182,34 @@
   "bill.recourse.sign.confirm": "Confirm",
   "bill.recourse.sign.subtitle": "This recourse request is legally binding",
   "bill.recourse.sign.title": "Are you sure?",
+  "bills.create.billOfExchange": "Against this bill of exchange",
+  "bills.create.calculateDiscount": "Calculate discount",
+  "bills.create.edit": "Edit",
+  "bills.create.issuance.cancel": "Cancel",
+  "bills.create.issuance.confirm": "Confirm",
+  "bills.create.issuance.title": "Issuance",
+  "bills.create.noProtest": "No protest.",
+  "bills.create.orderOf": "to the order of",
+  "bills.create.payOn": "pay on",
+  "bills.create.payee": "Payee",
+  "bills.create.payer": "Payer",
+  "bills.create.payment": "Place of payment",
+  "bills.create.payment.cancel": "Cancel",
+  "bills.create.payment.confirm": "Confirm",
+  "bills.create.payment.edit": "Edit",
+  "bills.create.payment.title": "Place of payment",
+  "bills.create.sumOf": "the sum of",
+  "bills.create.title": "Draw bill",
+  "bills.list.dateRange": "Date range",
+  "bills.list.earlier": "Earlier",
+  "bills.list.maturity": "Maturity",
+  "bills.list.title": "Bills",
+  "bills.list.today": "Today",
+  "bills.list.type.all": "All",
+  "bills.list.type.continget": "Contingent",
+  "bills.list.type.history": "History",
+  "bills.list.type.payee": "Payee",
+  "bills.list.type.payer": "Payer",
   "company.address": "Company address",
   "company.city": "City",
   "company.city_of_registration": "City of registration",
@@ -286,6 +314,8 @@
   "contacts.person.identityDocument": "Identity document",
   "contacts.person.identityNumber": "Social security number",
   "contacts.person.name": "Legal full name",
+  "contacts.select.details.select": "Select",
+  "contacts.select.title": "Select contact",
   "contacts.view.title": "View contact",
   "contacts.zipCode": "Zip code",
   "displayRange.days": "{value} Days",
