chore: update identity context throughout pages

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -127,7 +127,6 @@
   "Upload proof of registration": "Upload proof of registration",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
-  "authorizedSigners.title": "Authorized Signers",
   "bill.actions.actionsList": "Endorse",
   "bill.actions.endorse": "Endorse",
   "bill.actions.mint": "Mint",
@@ -188,6 +187,7 @@
   "bills.create.issuance.cancel": "Cancel",
   "bills.create.issuance.confirm": "Confirm",
   "bills.create.issuance.title": "Issuance",
+  "bills.create.issuer": "Issuer",
   "bills.create.noProtest": "No protest.",
   "bills.create.orderOf": "to the order of",
   "bills.create.payOn": "pay on",
@@ -199,7 +199,9 @@
   "bills.create.payment.edit": "Edit",
   "bills.create.payment.title": "Place of payment",
   "bills.create.sumOf": "the sum of",
+  "bills.create.switchIdentity": "Switch identity",
   "bills.create.title": "Draw bill",
+  "bills.create.type": "Type of bill",
   "bills.list.dateRange": "Date range",
   "bills.list.earlier": "Earlier",
   "bills.list.maturity": "Maturity",
@@ -338,6 +340,10 @@
   "endorsement.signer": "Signed",
   "endorsements.sort": "Newest",
   "endorsements.title": "Endorsements ({count})",
+  "home.balances": "Balances",
+  "home.balances.contingent": "Contingent",
+  "home.balances.payee": "Payee",
+  "home.balances.payer": "Payer",
   "identity.address": "Street address",
   "identity.city": "City",
   "identity.city_of_birth": "City of birth",
@@ -351,7 +357,6 @@
   "identity.company.registration_date": "Registration date",
   "identity.company.registration_number": "Registration number",
   "identity.company.zip": "Zip code",
-  "identity.companyIdentities.title": "Company identities",
   "identity.country": "Country",
   "identity.country_of_birth": "Country of birth",
   "identity.create.continue": "Continue",
@@ -373,7 +378,6 @@
   "identity.create.subtitle": "Your personal data is stored securely and encrypted in the network, nobody can decrypt it without your permission",
   "identity.create.termsAndConditions": "I agree to the <span>Terms and conditions</span>",
   "identity.create.title": "Encrypted data",
-  "identity.createNewCompanyIdentity": "Create new company",
   "identity.date_of_birth": "Birth date",
   "identity.edit": "Edit personal identity",
   "identity.edit.cancel": "Cancel",
@@ -386,7 +390,6 @@
   "identity.list.personal": "Personal identity",
   "identity.list.remove": "Remove identity from device",
   "identity.list.view": "View",
-  "identity.logout": "Remove identity from device",
   "identity.name": "Full name",
   "identity.personal.address": "Postal address",
   "identity.personal.city": "City",
@@ -398,8 +401,6 @@
   "identity.personal.identification_number": "Social security number",
   "identity.personal.name": "Legal full name",
   "identity.personal.zip": "Zip code",
-  "identity.personalIdentity.title": "Personal identity",
-  "identity.title": "Switch identity",
   "identity.view": "View",
   "identity.zip": "Zip code",
   "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
@@ -466,6 +467,5 @@
   "settings.theme.system": "System",
   "settings.theme.title": "Theme",
   "settings.title": "Settings",
-  "settings.versionNumber": "Version: {version}",
-  "viewIdentity.addAuthorizedSigner": "Add authorized signer"
+  "settings.versionNumber": "Version: {version}"
 }
