chore: merge bill endpoints integration

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -181,6 +181,17 @@
   "bill.recourse.sign.confirm": "Confirm",
   "bill.recourse.sign.subtitle": "This recourse request is legally binding",
   "bill.recourse.sign.title": "Are you sure?",
+  "bill.view.details.accepted": "Accepted",
+  "bill.view.details.billOfExchange": "Against this bill of exchange",
+  "bill.view.details.drawer": "Drawer",
+  "bill.view.details.endorsements": "Endorsements",
+  "bill.view.details.noProtest": "No protest. Value received.",
+  "bill.view.details.payOn": "Pay on",
+  "bill.view.details.payer": "Payer",
+  "bill.view.details.placeOfPayment": "Place of payment",
+  "bill.view.details.status": "Status:",
+  "bill.view.details.sum": "The sum of",
+  "bill.view.details.toTheOrderOf": "To the order of",
   "bills.create.billOfExchange": "Against this bill of exchange",
   "bills.create.discount": "Calculate discount",
   "bills.create.edit": "Edit",
