chore: update balances and bills endpoints on home page

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -8,14 +8,12 @@
   "Authorised signer": "Authorised signer",
   "Balances": "Balances",
   "Bill issuer": "Bill issuer",
-  "Bill list": "Bill list",
   "Bills": "Bills",
   "Birth date": "Birth date",
   "Birth date (MM/DD/YYYY)": "Birth date (MM/DD/YYYY)",
   "Bitcoin for the real economy": "Bitcoin for the real economy",
   "Calculate discount": "Calculate discount",
   "Cancel": "Cancel",
-  "Cashflow": "Cashflow",
   "City of birth": "City of birth",
   "City of issuing": "City of issuing",
   "City of payment": "City of payment",
@@ -91,7 +89,6 @@
   "Preview bill": "Preview bill",
   "Preview company": "Preview company",
   "Preview identity": "Preview identity",
-  "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
   "Registration date": "Registration date",
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
@@ -355,6 +352,9 @@
   "home.balances.contingent": "Contingent",
   "home.balances.payee": "Payee",
   "home.balances.payer": "Payer",
+  "home.recentBills": "Recent bills",
+  "home.recentBills.cashflow": "Cashflow",
+  "home.recentBills.list": "Bill list",
   "identity.address": "Street address",
   "identity.city": "City",
   "identity.city_of_birth": "City of birth",
