chore: fix endorsements integration

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -147,6 +147,10 @@
   "bill.draw.placeOfPayment": "Place of payment",
   "bill.draw.sum": "the sum of",
   "bill.draw.toTheOrderOf": "to the sum of",
+  "bill.endorsement.payee": "Pay to the order of",
+  "bill.endorsement.signer": "Signed",
+  "bill.endorsements.sort": "Newest",
+  "bill.endorsements.title": "Endorsements ({count})",
   "bill.mint.cancel": "Cancel mint request",
   "bill.mint.preview.forTheSumOf": "for the sum of",
   "bill.mint.preview.mintedEcash": "Ecash minted",
@@ -344,10 +348,6 @@
   "endorse.sign": "Sign",
   "endorse.termsAndConditions": "I agree to the Terms and conditions",
   "endorse.title": "Endorse bill",
-  "endorsement.payee": "Pay to the order of",
-  "endorsement.signer": "Signed",
-  "endorsements.sort": "Newest",
-  "endorsements.title": "Endorsements ({count})",
   "home.balances": "Balances",
   "home.balances.contingent": "Contingent",
   "home.balances.payee": "Payee",
