--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -124,9 +124,13 @@
   "Upload proof of registration": "Upload proof of registration",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
+  "bill.actions.acceptance.reject": "Reject acceptance",
+  "bill.actions.acceptance.sign": "Sign acceptance",
   "bill.actions.actionsList": "Endorse",
   "bill.actions.endorse": "Endorse",
   "bill.actions.mint": "Mint",
+  "bill.actions.pay": "Pay",
+  "bill.actions.requestAcceptance": "Request to accept",
   "bill.actions.requestToAccept": "Request to accept",
   "bill.actions.sell": "Sell",
   "bill.card.accepted": "Accepted",
