--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -124,8 +124,12 @@
   "Upload proof of registration": "Upload proof of registration",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
+  "bill.actions.acceptance.cancel": "Cancel",
+  "bill.actions.acceptance.confirm": "Confirm",
+  "bill.actions.acceptance.description": "The signing of your acceptance is legally binding",
   "bill.actions.acceptance.reject": "Reject acceptance",
   "bill.actions.acceptance.sign": "Sign acceptance",
+  "bill.actions.acceptance.title": "The signing of your acceptance is legally binding",
   "bill.actions.actionsList": "Endorse",
   "bill.actions.endorse": "Endorse",
   "bill.actions.mint": "Mint",
