chore: display proper bill status

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -135,6 +135,7 @@
   "bill.actions.mint": "Mint",
   "bill.actions.pay": "Pay",
   "bill.actions.requestAcceptance": "Request to accept",
+  "bill.actions.requestAcceptance.success": "Request sent successfully",
   "bill.actions.requestToAccept": "Request to accept",
   "bill.actions.sell": "Sell",
   "bill.card.accepted": "Accepted",
@@ -190,7 +191,12 @@
   "bill.recourse.sign.confirm": "Confirm",
   "bill.recourse.sign.subtitle": "This recourse request is legally binding",
   "bill.recourse.sign.title": "Are you sure?",
-  "bill.view.details.accepted": "Accepted",
+  "bill.status.accepted": "Accepted",
+  "bill.status.paid": "Paid",
+  "bill.status.pending_acceptance": "Pending acceptance",
+  "bill.status.pending_payment": "Pending payment",
+  "bill.status.rejected": "Rejected",
+  "bill.status.unpaid": "Unpaid",
   "bill.view.details.billOfExchange": "Against this bill of exchange",
   "bill.view.details.drawer": "Drawer",
   "bill.view.details.endorsements": "Endorsements",
