chore: fix endorsement action

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -132,6 +132,7 @@
   "bill.actions.acceptance.title": "The signing of your acceptance is legally binding",
   "bill.actions.actionsList": "Endorse",
   "bill.actions.endorse": "Endorse",
+  "bill.actions.list": "Endorse",
   "bill.actions.mint": "Mint",
   "bill.actions.pay": "Pay",
   "bill.actions.requestAcceptance": "Request to accept",
@@ -156,6 +157,12 @@
   "bill.draw.placeOfPayment": "Place of payment",
   "bill.draw.sum": "the sum of",
   "bill.draw.toTheOrderOf": "to the sum of",
+  "bill.endorse.endorsee": "Endorsee",
+  "bill.endorse.sign": "Are you sure?",
+  "bill.endorse.sign.cancel": "Cancel",
+  "bill.endorse.sign.confirm": "Confirm",
+  "bill.endorse.sign.description": "The signing of the endorsement is legally binding",
+  "bill.endorse.termsAndConditions": "I agree to the Terms and conditions",
   "bill.endorsement.payee": "Pay to the order of",
   "bill.endorsement.signer": "Signed",
   "bill.endorsements.sort": "Newest",
@@ -357,10 +364,7 @@
   "dropdown.option.90days": "90 Days",
   "endorse.cancel": "Cancel",
   "endorse.confirm": "Confirm",
-  "endorse.endorsee": "Endorsee",
   "endorse.orderOf": "to the order of",
-  "endorse.sign": "Sign",
-  "endorse.termsAndConditions": "I agree to the Terms and conditions",
   "endorse.title": "Endorse bill",
   "home.balances": "Balances",
   "home.balances.contingent": "Contingent",
