chore: fix company info apis (edit, add/remove signer, create)

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -270,9 +270,11 @@
   "company.registration_date": "Registration date",
   "company.registration_number": "Registration number",
   "company.signer.add": "Add authorized signer",
+  "company.signer.add.success": "Authorized signer added successfully",
   "company.signer.remove": "Do you want to delete {name}?",
   "company.signer.remove.cancel": "Cancel",
   "company.signer.remove.confirm": "Confirm",
+  "company.signer.remove.success": "Authorized signer removed successfully",
   "company.signer.remove.warning": "You can always re-add a signer later",
   "company.signers": "Authorized signers",
   "company.view.signers": "Edit authorized signers",
