chore: fix file uploads for company

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -260,6 +260,9 @@
   "company.create.requiredInformation.description": "Please enter the required data to create a new company identity",
   "company.create.requiredInformation.title": "Company identity",
   "company.create.sign": "Sign",
+  "company.create.success.description": "We have successfully created your company and can add other signers",
+  "company.create.success.finish": "Finish",
+  "company.create.success.title": "Success",
   "company.edit.cancel": "Cancel",
   "company.edit.save": "Save",
   "company.edit.title": "Edit company identity",
