updates to bills flow

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -148,6 +148,14 @@
   "bill.card.payer": "Payer",
   "bill.card.placeOfPayment": "Place of payment",
   "bill.card.status": "Status:",
+  "bill.create.preview.details.billOfExchange": "Against this bill of exchange",
+  "bill.create.preview.details.drawer": "Drawer",
+  "bill.create.preview.details.noProtest": "No protest. Value received.",
+  "bill.create.preview.details.payOn": "Pay on",
+  "bill.create.preview.details.payer": "Payer",
+  "bill.create.preview.details.placeOfPayment": "Place of payment",
+  "bill.create.preview.details.sum": "The sum of",
+  "bill.create.preview.details.toTheOrderOf": "To the order of",
   "bill.draw.date": "Date",
   "bill.draw.edit": "Edit",
   "bill.draw.noProtest": "No protest. Value received.",
@@ -231,10 +239,13 @@
   "bills.create.payment.confirm": "Confirm",
   "bills.create.payment.edit": "Edit",
   "bills.create.payment.title": "Place of payment",
+  "bills.create.preview": "Preview",
+  "bills.create.sign": "Sign",
   "bills.create.sumOf": "the sum of",
   "bills.create.switchIdentity": "Switch identity",
   "bills.create.title": "Draw bill",
   "bills.create.type": "Type of bill",
+  "bills.create.valueReceived": "Value received.",
   "bills.list.dateRange": "Date range",
   "bills.list.earlier": "Earlier",
   "bills.list.maturity": "Maturity",
