chore: enable payment views for holder and payer

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -135,8 +135,10 @@
   "bill.actions.list": "Endorse",
   "bill.actions.mint": "Mint",
   "bill.actions.pay": "Pay",
+  "bill.actions.payment.check": "Check payment",
   "bill.actions.requestAcceptance": "Request to accept",
   "bill.actions.requestAcceptance.success": "Request sent successfully",
+  "bill.actions.requestPayment": "Request payment",
   "bill.actions.requestToAccept": "Request to accept",
   "bill.actions.sell": "Sell",
   "bill.card.accepted": "Accepted",
@@ -196,6 +198,11 @@
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
+  "bill.pay.title": "Payment instructions",
+  "bill.payment.info.address": "Address to pay",
+  "bill.payment.info.from": "Payment from",
+  "bill.payment.info.link": "Link to pay",
+  "bill.payment.info.privateKey": "Private key spend",
   "bill.recourse.nonAcceptance.priorHolders": "Prior holders",
   "bill.recourse.nonAcceptance.priorHolders.description": "Select a prior holder for recourse",
   "bill.recourse.nonAcceptance.select": "Select",
@@ -464,10 +471,6 @@
   "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
   "pages.onboarding.emailVerification.title": "Verify your email address",
-  "pay.title": "Payment instructions",
-  "payment.info.address": "Address to pay",
-  "payment.info.from": "Payment from",
-  "payment.info.link": "Link to pay",
   "seedPhrase.recover.description": "Please enter your seed phrase to restore your identity",
   "seedPhrase.recover.heading": "Recover with seed phrase",
   "settings.agreements.title": "Agreements",
