chore: update payment actions

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -137,8 +137,11 @@
   "bill.actions.pay": "Pay",
   "bill.actions.payment.check": "Check payment",
   "bill.actions.requestAcceptance": "Request to accept",
+  "bill.actions.requestAcceptance.error": "Request failed",
   "bill.actions.requestAcceptance.success": "Request sent successfully",
   "bill.actions.requestPayment": "Request payment",
+  "bill.actions.requestPayment.error": "Request failed",
+  "bill.actions.requestPayment.success": "Request sent successfully",
   "bill.actions.requestToAccept": "Request to accept",
   "bill.actions.sell": "Sell",
   "bill.card.accepted": "Accepted",
