--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -184,6 +184,8 @@
   "bill.mint.preview.forTheSumOf": "for the sum of",
   "bill.mint.preview.mintedEcash": "Ecash minted",
   "bill.mint.preview.sign": "Sign",
+  "bill.mint.preview.sign.cancel": "Cancel",
+  "bill.mint.preview.sign.confirm": "Confirm",
   "bill.mint.preview.sign.subtitle": "The endorsement to the mint is legally binding",
   "bill.mint.preview.sign.title": "Are you sure?",
   "bill.mint.preview.title": "Preview mint",
@@ -390,8 +392,6 @@
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
   "dropdown.option.90days": "90 Days",
-  "endorse.cancel": "Cancel",
-  "endorse.confirm": "Confirm",
   "endorse.orderOf": "to the order of",
   "endorse.title": "Endorse bill",
   "home.balances": "Balances",
