chore: fix sell bill holder form

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -106,7 +106,6 @@
   "Select locale": "Select locale",
   "Selected date": "Selected date",
   "Sell": "Sell",
-  "Sell a bill": "Sell a bill",
   "Settings": "Settings",
   "Sign": "Sign",
   "Sign bills on behalf of a company": "Sign bills on behalf of a company",
@@ -155,7 +154,7 @@
   "bill.card.status": "Status:",
   "bill.create.preview.details.billOfExchange": "Against this bill of exchange",
   "bill.create.preview.details.drawer": "Drawer",
-  "bill.create.preview.details.noProtest": "No protest. Value received.",
+  "bill.create.preview.details.noProtest": "No protest.",
   "bill.create.preview.details.payOn": "Pay on",
   "bill.create.preview.details.payer": "Payer",
   "bill.create.preview.details.placeOfPayment": "Place of payment",
@@ -216,6 +215,11 @@
   "bill.recourse.sign.confirm": "Confirm",
   "bill.recourse.sign.subtitle": "This recourse request is legally binding",
   "bill.recourse.sign.title": "Are you sure?",
+  "bill.sell.buyer": "Buyer",
+  "bill.sell.calculateDiscount": "Calculate discount",
+  "bill.sell.forTheSumOf": "for the sum of",
+  "bill.sell.title": "Sell bill",
+  "bill.sell.toTheOrderOf": "to the order of",
   "bill.status.accepted": "Accepted",
   "bill.status.paid": "Paid",
   "bill.status.pending_acceptance": "Pending acceptance",
@@ -250,6 +254,7 @@
   "bills.create.payment.edit": "Edit",
   "bills.create.payment.title": "Place of payment",
   "bills.create.preview": "Preview",
+  "bills.create.preview.details.valueReceived": "Value received.",
   "bills.create.sign": "Sign",
   "bills.create.sumOf": "the sum of",
   "bills.create.switchIdentity": "Switch identity",
