chore: offer to sell view

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -105,7 +105,6 @@
   "Select date range": "Select date range",
   "Select locale": "Select locale",
   "Selected date": "Selected date",
-  "Sell": "Sell",
   "Settings": "Settings",
   "Sign": "Sign",
   "Sign bills on behalf of a company": "Sign bills on behalf of a company",
@@ -218,6 +217,9 @@
   "bill.sell.buyer": "Buyer",
   "bill.sell.calculateDiscount": "Calculate discount",
   "bill.sell.forTheSumOf": "for the sum of",
+  "bill.sell.sign": "Sign",
+  "bill.sell.sign.cancel": "Cancel",
+  "bill.sell.sign.confirm": "Confirm",
   "bill.sell.title": "Sell bill",
   "bill.sell.toTheOrderOf": "to the order of",
   "bill.status.accepted": "Accepted",
