chore: add view offer page for buyer and seller

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -202,6 +202,11 @@
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
+  "bill.offer.buyer": "Payment from",
+  "bill.offer.id": "Sell bill",
+  "bill.offer.payment.address": "Address to pay",
+  "bill.offer.payment.link": "Link to pay",
+  "bill.offer.title": "Bill offer",
   "bill.pay.title": "Payment instructions",
   "bill.payment.info.address": "Address to pay",
   "bill.payment.info.from": "Payment from",
