chore: link bill sale actions

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -129,9 +129,12 @@
   "bill.actions.acceptance.sign": "Sign acceptance",
   "bill.actions.acceptance.title": "The signing of your acceptance is legally binding",
   "bill.actions.actionsList": "Endorse",
+  "bill.actions.buy.reject": "Reject",
+  "bill.actions.buy.view": "View payment details",
   "bill.actions.endorse": "Endorse",
   "bill.actions.list": "Endorse",
   "bill.actions.mint": "Mint",
+  "bill.actions.offer.view": "View payment status",
   "bill.actions.pay": "Pay",
   "bill.actions.payment.check": "Check payment",
   "bill.actions.requestAcceptance": "Request to accept",
@@ -222,6 +225,8 @@
   "bill.recourse.sign.confirm": "Confirm",
   "bill.recourse.sign.subtitle": "This recourse request is legally binding",
   "bill.recourse.sign.title": "Are you sure?",
+  "bill.reject.sign.cancel": "Cancel",
+  "bill.reject.sign.confirm": "Confirm",
   "bill.sell.buyer": "Buyer",
   "bill.sell.calculateDiscount": "Calculate discount",
   "bill.sell.forTheSumOf": "for the sum of",
